# BioStack-Workflows

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
biostack/: __init__.py  main.py
biostack/ai/: __init__.py  prompts.py  provider.py
biostack/api/: __init__.py  app.py  workspace.py
biostack/api/routes/: __init__.py  explain.py  health.py  projects.py  reports.py  runs.py
biostack/api/schemas/: __init__.py  explain.py  projects.py  reports.py  runs.py
biostack/cli/: __init__.py  doctor.py  explain.py  init.py  report.py  run.py  web.py
biostack/core/: __init__.py  checksums.py  config.py  metadata.py  project.py  runner.py  system.py
biostack/db/: __init__.py  models.py  repositories.py  session.py
biostack/db/migrations/: __init__.py  env.py
biostack/db/migrations/versions/: 0001_create_persistent_models.py  __init__.py
biostack/reports/: __init__.py  generator.py
biostack/templates/: __init__.py  biostack.yml.j2  project_README.md.j2  report.html.j2
biostack/web/: __init__.py  app.py  routes.py
biostack/web/templates/: index.html  reports.html
biostack/worker/: __init__.py  queue.py  runner.py
docker/: backend.Dockerfile  entrypoint.sh  frontend.Dockerfile  nginx.conf  worker.Dockerfile
docs/: ai-troubleshooting.md  api.md  architecture.md  audit-log-phase-13.md  audit-log.md  backup-restore.md  database.md  demo.md  docker-platform.md  e2e.md  frontend-ux.md  frontend.md  getting-started.md  installation.md  performance.md  reports.md  roadmap.md  security.md  troubleshooting-docker.md  web-ui.md  worker-queue.md  workflows.md
examples/demo-rnaseq/: README.md  biostack.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: ExplainPanel.tsx  LogViewer.tsx  ProjectForm.tsx  ReportLink.tsx  RunTable.tsx  StatusBadge.tsx
frontend/src/pages/: Dashboard.tsx  Explain.tsx  Projects.tsx  Reports.tsx  Runs.tsx
scripts/: e2e-smoke.sh
tests/: test_ai_provider.py  test_api_flow.py  test_api_health.py  test_api_persistence.py  test_api_run_queue.py  test_checksums.py  test_cli.py  test_db_models.py  test_explain.py  test_init.py  test_metadata.py  test_platform_e2e.py  test_reports.py  test_run.py  test_templates.py  test_web.py  test_worker_queue.py
workflows/rnaseq-basic/: README.md  main.nf  nextflow.config
workflows/rnaseq-basic/test-data/: README.md
workflows/variant-calling-basic/: README.md  main.nf
